# ai-brain-australia

./: .gitignore  AGENTS 2.md  CHANGELOG.md  CLAUDE.md  COMPLIANCE_POSTURE.md  CONTRIBUTING.md  DISCLAIMER.md  GETTING_STARTED.md  GETTING_STARTED_ARABIC.md  GETTING_STARTED_CHINESE.md  GETTING_STARTED_VIETNAMESE.md  KNOWLEDGE_PROVENANCE.md  MODEL_SETUP.md  NO_PII_NO_DATA.md  README.md  ROUTING_CONTRACT 2.md  SCOPE.md  SECURITY.md  STATUS.md  TRANSLATION_HELP_WANTED.md  config.toml.template  pyproject.toml  setup.sh
_drafting_data/: 00_DRAFTING_INDEX.md  10-contract-template-sale-of-goods.md  100-appeal-notice-fcafc.md  101-appeal-hca-special-leave.md  102-appeal-grounds-of-appeal.md  103-appeal-written-submissions.md  104-appeal-book-and-chronology.md  11-contract-template-services.md  110-injunction-without-notice-application.md  111-injunction-mareva-freezing.md  112-injunction-search-order-anton-piller.md  113-undertaking-as-to-damages.md  114-interlocutory-injunction-skeleton.md  12-contract-template-employment.md  120-disclosure-list-of-documents.md  121-disclosure-privilege-log.md  122-disclosure-subpoena-and-non-party-discovery.md  13-contract-template-nda-confidentiality.md  130-expert-letter-of-instruction.md  131-expert-report-fcr-part23.md  132-expert-joint-conference-statement.md  133-expert-single-joint-expert.md  134-expert-concurrent-evidence-hot-tubbing.md  14-contract-template-residential-tenancy.md  140-default-judgment.md  141-set-aside-default-judgment.md  15-contract-template-commercial-lease.md  150-enforcement-writ-of-execution.md  (+53 more)
(+108 files in other folders)
