[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ailawfirm-australia"
version = "0.1.0"
description = "Practice OS for Australian solo solicitors and barristers · forked from MemPalace · MIT"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Rushikesh R. Mahajan (publishing as wolfgang_rush)", email = "advrushikeshravindramahajan@gmail.com"}]
keywords = ["legal", "australia", "law", "practice-management", "ai", "mcp"]
urls = {Repository = "https://github.com/Wolfgangrush/ai-law-firm-australia"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=0.5.0",
    "pydantic>=2.0",
    "icalendar>=5.0",
    "python-dateutil>=2.8",
    "pyyaml>=6.0",
]

[project.scripts]
ailawfirm-australia = "ailawfirm_australia.cli:main"

[tool.setuptools.packages.find]
include = ["ailawfirm_australia*"]

[tool.setuptools.package-data]
ailawfirm_australia = ["templates/*.md", "templates/*.toml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
